# sample-inspection-selector

./: .gitignore  share.yaml
apps/: env.devel  pyproject.toml  requirements.txt
apps/apps/: celery.py  schema.py  settings.py  urls.py
apps/main/: common.py  mutation.py  query.py  schema.py  types.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Settings.ts  demo.ts  loading.scss
frontend/src/components/: InputDialog.tsx  Loading.tsx  Nav.tsx  Submit.tsx
frontend/src/gql/: query.ts
frontend/src/middleware/: graphql.ts  request.ts
frontend/src/pages/Peel/: Form.tsx  Index.tsx  Info.tsx  InputDialog.tsx  QRCodeDialog.tsx  Ring.tsx  Selection.tsx  Submit.tsx
frontend/src/pages/Pickup/: Form.tsx  Index.tsx  Info.tsx  QRCodeDialog.tsx  SampleRings.tsx  Selection.tsx
frontend/src/store/: peel.ts  pickup.ts
